# proxhy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_stub.rs
.github/workflows/: build-wheels.yml
broadcasting/: plugin.py  settings.py  transform.py
broadcasting/plugins/: base.py  commands.py  login.py  settings.py  spectate.py
compass/: client.py  server.py
gamestate/: Cargo.toml  README.md  models.py  pyproject.toml  state.py  state_old.py
gamestate/gamestate/: __init__.py  __init__.pyi  builders.py  constants.py
gamestate/gamestate/_gamestate/: __init__.pyi
gamestate/src/: constants.rs  enums.rs  lib.rs  packet_handlers.rs  reader.rs  state.rs  types.rs
mcauth/: account_source_store.py  account_sources.py  session_loader.py
petty/: Cargo.toml  pyproject.toml
petty/petty/: README.md  events.py  models.py  nbt.py  net.py
petty/petty/_petty/: __init__.pyi
petty/petty/assets/: __init__.py  _item_mapping.py
petty/petty/protocol/: __init__.py  datatypes.py
petty/python/petty/: __init__.py  endpoints.py  models.py  nbt.py
petty/python/petty/_petty/: __init__.pyi
petty/python/petty/protocol/: _item_literals.py  crypt.py  datatypes.py
petty/src/: datatypes.rs  item_data.rs  items.json  lib.rs  models.rs  nbt.rs  slot.rs  stub_gen.rs
plugins/: autoboop.py  broadcaster.py  chat.py  compass.py  debug.py  gamestate.py  hypixelstate.py  login.py  misc.py  respack.py  slashproxhy.py  spatial.py  tuff.jar.py
plugins/broadcastee/: plugin.py  plugins.py
plugins/commands/: _commands.py
plugins/settings/: __init__.py  _settings.py
plugins/statcheck/: __init__.py  command.py  models.py  providers.py
proxhy/: _font_widths.py  assets.py  main.py  player_list.py  plugin.py  respack.py  settings.py  tablist.py  utils.py
proxhy/argtypes/: hypixel.py  players.py  settings.py
proxhypixel/: models.py
