[project]
name = "proxhy"
version = "2026.06.23.post1"
description = "A Hypixel proxy with various different features"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Kavi Bidlack" }, { name = "Manu Jhawar" }]
dependencies = [
  "cryptography>=48.0.0",
  "httpx>=0.28.1",
  "hypixel-py>=0.4.2",
  "keyring>=25.6",
  "numba>=0.63.1",
  "numpy>=2.3.3",
  "orjson>=3.11.7",
  "packaging>=26.2",
  "platformdirs>=4.3",
  "pyjwt>=2.10",
  "pyroh>=0.4.2",
  "seraph",
  "uvloop>=0.22.1; platform_system != 'Windows'",
  "winloop>=0.6.0; platform_system == 'Windows'",
]

[project.scripts]
proxhy = "proxhy.main:main"

[dependency-groups]
dev = ["pre-commit", "pyrefly", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyrefly]
project-excludes = ["assets/*"]

[tool.pyrefly.errors]
invalid-annotation = false

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["assets/*"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = ["E501", "B904", "B008", "C408"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"assets" = ["*.json", "*.png", "font/*.bin", "font/*.png"]

[tool.uv.workspace]
members = ["mcauth", "petty", "compass"]

[tool.uv.sources]
mcauth = { workspace = true }
petty = { workspace = true }
compass = { workspace = true }
seraph = { git = "https://github.com/proxhyhq/seraph" }
