[package]
name = "petty-ext"
version = "0.1.0"
edition = "2024"

[lib]
name = "_petty"
# cdylib = Python extension; rlib = needed so the stub_gen bin can link it
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3          = { version = "0.29", features = ["abi3-py314"] }
pyo3-stub-gen = { version = "0.23" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
flate2        = "1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
lto           = true
codegen-units = 1

[[bin]]
name = "stub_gen"
path = "src/stub_gen.rs"
doc  = false
