[project]
name = "petty"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=48.0.0",
  "orjson>=3.11.7",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Module installed as petty._petty; Python package detected from python-source.
module-name = "petty._petty"
# The petty Python sources live in petty/petty/ (mixed Rust/Python layout).
python-source = "."
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "Cargo.toml" },
  { file = "Cargo.lock" },
  { file = "src/**/*.rs" },
  { file = "petty/**/*.py" },
]
