[project]
name = "petty"
version = "0.2.0"
requires-python = ">=3.14"
dependencies = [
  "cryptography>=48.0.0",
  "orjson>=3.11.7",
]

[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
module-name = "petty._petty"
python-source = "python"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "Cargo.toml" },
  { file = "**/*.rs" },
]
